# live-action

./: .clinerules  .clinerules-architect  .clinerules-ask  .clinerules-code  .clinerules-debug  .clinerules-eval  .clinerules-gpu-ops  .clinerules-orchestrator  .gitignore  .roomodes  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: defender-for-devops.yml
.roo/: system-prompt-base  system-prompt-video-pipeline
.roo/rules-architect/: README.md
.roo/rules-ask/: README.md
.roo/rules-code/: README.md
.roo/rules-debug/: README.md
.roo/rules-eval/: README.md
.roo/rules-gpu-ops/: README.md
.roo/rules-orchestrator/: README.md
plans/: implementation-plan.md
scripts/: check_cuda.py  check_ffmpeg.py  live-action.service  sota_translate.py  sota_upscale.py  start_live_action_vm.sh
src/live_action/: __init__.py  cli.py  config.py  logging_utils.py
src/live_action/adapters/: __init__.py  command.py  local_video.py
src/live_action/eval/: __init__.py  metrics.py  requeue.py
src/live_action/observability/: metrics.py
src/live_action/pipeline/: __init__.py  chunking.py  config.py  translator.py  upscale.py
src/live_action/preprocess/: ffmpeg.py  models.py  service.py
src/live_action/runtime/: gpu.py  (+1 more)
tests/: test_api_integration.py  test_auth.py  test_chunking.py  test_cli_provisioning.py  test_end_to_end_smoke.py  test_orchestrator_validation.py  test_pipeline_config.py  test_provisioning.py  test_queue.py  test_queue_errors.py  test_queue_run_lookup.py  test_requeue.py  test_resume_chunks.py  test_startup.py  test_store.py
(+9 files in other folders)
